# spire

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md
av_cli/: Cargo.toml  build.rs
av_cli/src/: generate_report.rs  main.rs
av_cli/src/cli/: commands.rs  mod.rs
av_config/: config.json
av_core/: Cargo.toml
av_core/heuristic_engine/: Cargo.toml
av_core/heuristic_engine/src/: lib.rs  types.rs  utils.rs
av_core/heuristic_engine/src/rules/: behavior.rs  file_struct.rs  mod.rs  obfuscation.rs  strings.rs
av_core/src/: lib.rs
av_core/src/actions/: quarantine.rs
av_core/src/core/: entropy.rs  file_cert.rs  hashes.rs  mod.rs  models.rs  scanner.rs
av_core/src/core/config/: mod.rs  parser.rs
av_core/src/core/win_pe/: mod.rs  win_pe_inspection.rs
av_core/src/db/: mod.rs
av_core/src/modules/: decoy_files_detect.rs  detect_packers.rs  logging.rs  mod.rs  quarantine.rs  scheduler.rs
av_core/src/modules/archive/: zip.rs
av_core/src/modules/db/: install.rs  mod.rs
av_core/src/modules/logger/: mod.rs
av_core/src/modules/logging/: utils.rs
av_core/src/scanner/: analysis.rs  mod.rs
av_db/: Cargo.toml
av_db/src/: lib.rs  models.rs
av_db/src/update/: update.rs
av_engine/: Cargo.toml  build.rs
av_engine/src/: main.rs  types.rs
av_gui/: client.py  main.py
deploy/: spire.service
docs/: Signature names standars.md
proto/: spire.proto
server/: gen_certs.sh  serve.sh
test_files/: eicar.py  evil  evil.c  evil.elf  malware.py
