[workspace]
members = ["av_core", "av_cli"]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
anyhow = "1.0.98"
log = "0.4.27"
indicatif = "0.18.0"
env_logger = "0.11.8"
clap = { version = "4.5.43", features = ["derive"] }
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["blocking"] }
