[package]
name = "spire"
version = "0.1.0"
edition = "2024"

[dependencies]
av_core = { path = "../av_core" }

clap = { workspace = true }
env_logger = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
log.workspace = true

tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build  = "0.14.2"
