[package]
name = "spire"
version = "0.2.0"
edition = "2024"

[dependencies]
av_core = { path = "../av_core" }
heuristic_engine = { path = "../av_core/heuristic_engine" }

clap = { workspace = true }
env_logger = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
log.workspace = true

tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
notify = "8.2.0"

[build-dependencies]
tonic-prost-build  = "0.14.2"
