[package]
name = "av_core"
version = "0.1.0"
edition = "2024"

[dependencies]
md5 = "0.8.0"
walkdir = "2.5.0"
sha2 = "0.10.9"
hex = "0.4.3"
yara-x = "1.5.0"
dirs = "6.0.0"

log = { workspace = true }
heuristic_engine = { path = "heuristic_engine"}
rusqlite = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
zip = { version = "5.0.0", features = ["aes-crypto"] }
object = "0.37.3"
serde = "1.0.219"
serde_json = "1.0.143"


[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = ["Win32_Security_Cryptography",
"Win32_System_SystemServices",
"Win32_Foundation", "Win32_Security", "Win32_Security_WinTrust", "Win32_System_WindowsProgramming"]}
