[package]
name = "av_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.1"

av_core = { path = "../av_core" }

anyhow = { workspace = true }
